# jarvis-panel

./: .gitignore  jp.py  pyproject.toml
jp/: cli.py  config.py  layout.py  session.py  summarize.py
jp/panels/: default.yaml  dev.yaml
