[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jarvis-panel"
version = "0.1.0"
description = "tmux multi-pane manager with AI summaries"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
jp = "jp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["jp*"]
